// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner bounce displays a spinner-bounce class 1`] = `
<span
  className="spinner-wrap absolute is-hidden"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner calls a setTimeout when delay is passed 1`] = `
<span
  className="spinner-wrap absolute is-hidden"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner displays an is-hidden class 1`] = `
<span
  className="spinner-wrap absolute is-hidden"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner dots displays a spinner-dots class 1`] = `
<span
  className="spinner-wrap absolute is-hidden"
>
  <span
    className="spinner-dots"
  >
    <span>
      <span
        className="dot1"
        style={null}
      />
      <span
        className="dot2"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner has an optClass 1`] = `
<span
  className="spinner-wrap loading absolute testing"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner has custom background color 1`] = `
<span
  className="spinner-wrap loading absolute"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={
          Object {
            "backgroundColor": "#3C97D3",
          }
        }
      />
      <span
        className="bounce2"
        style={
          Object {
            "backgroundColor": "#3C97D3",
          }
        }
      />
      <span
        className="bounce3"
        style={
          Object {
            "backgroundColor": "#3C97D3",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Spinner with fixed position has a loading class 1`] = `
<span
  className="spinner-wrap loading fixed"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner with inline position has a loading class 1`] = `
<span
  className="spinner-wrap loading inline"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;

exports[`Spinner with loading true has a loading class 1`] = `
<span
  className="spinner-wrap loading absolute"
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
        style={null}
      />
      <span
        className="bounce2"
        style={null}
      />
      <span
        className="bounce3"
        style={null}
      />
    </span>
  </span>
</span>
`;
